[tool.poetry]
name = "pyfail2banapi"
version = "1.0.0"
description = "A Python API for interacting with fail2ban statistics via FastAPI and Pydantic models."
authors = ["Denis Rozhnovskiy <pytelemonbot@mail.ru>"]
license = "MIT"
readme = "README.md"
keywords = ["fail2ban", "api", "fastapi", "security", "pydantic"]
homepage = "https://github.com/orenlab/pyfail2banapi"
repository = "https://github.com/orenlab/pyfail2banapi"
documentation = "https://your-project-docs.com"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls"
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
pydantic = "^2.9.0"
# Add other core dependencies for the API here.
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]
# Add development and testing dependencies.
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.0.0"
black = "^24.8.0"
isort = "^5.0.0"
pylint = "^3.2.7"
httpx = "^0.27.2"  # Useful for testing FastAPI with async calls.
pytest-asyncio = "^0.24.0"
mock = "^5.0.0"
types-setuptools = "^74.1.0.20240907"

[tool.poetry.scripts]
# Add any CLI commands here if your package has any.
fail2ban-api = "fail2ban_api.main:app"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Pytest configuration settings to improve test runs.
minversion = "7.0"
addopts = "--cov=fail2ban_client --cov=app --cov-report=term --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]  # Disable missing docstring checks in tests.